ligolang/src/test/contracts/negative/reuse_variable_name_top.jsligo
let dog = 1;
let dog = true;